--- a/index.html
+++ b/index.html
@@ -10,19 +10,18 @@
 <div>
 <body>
 	<h1>Student Bio</h1>
-	<div>
+	<div class="mainBio">
 	<h2>Jamie Gelo</h2>
 
 	<img src="IMG_2256.jpg" alt="Picture of Author" height="220" width="250">
-	</div>
-	
-	<div>
+
 	<p>
-		I am a digital project manager, console game player (or, I was before I became a mom), and mom to 1 toddler (ignore me if I offer to show a photo).
+		about me <br> 
+		I am a digital project manager, console game player, and mom to 1 toddler (ignore me if I offer to show a photo).
 	</p>
 	</div>
 
-	<div>
+	<div class="Links">
 		<h2>Contact Info</h2>
 	
 		<ul>
@@ -32,8 +31,10 @@
 			
 		</ul>
 	</div>
-	<footer>
-		<p>The Small Print</p>
-	</footer>
+	<div class="footer">
+	
+		The Small Print
+
+	</div>
 </body>
 </html>
