--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <div>
-<body>
+<body background="h3po4_1600.jpg">
 	<h1>Student Bio</h1>
 	<div class="mainBio">
 	<h2>Jamie Gelo</h2>
@@ -17,7 +17,7 @@
 
 	<p>
 		about me <br> 
-		I am a digital project manager, console game player, and mom to 1 toddler (ignore me if I offer to show a photo).
+		I am a digital project manager, <br> console game player, <br> and mom to 1 toddler <br> (ignore me if I offer to show a photo).
 	</p>
 	</div>
 
