--- a/index.html
+++ b/index.html
@@ -3,38 +3,35 @@
 <head>
 	<!--secret instructions for interpretation of the rest of the page*/ -->
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<title>Biography</title>
+	<title>JGeloBiography</title>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
-<div>
-<body background="h3po4_1600.jpg">
-	<h1>Student Bio</h1>
-	<div class="mainBio">
-	<h2>Jamie Gelo</h2>
 
-	<img src="IMG_2256.jpg" alt="Picture of Author" height="220" width="250">
+<body background="h3po4_1600.jpg" alt="Background Image">
+	
+	<header>Jamie Gelo</header>
 
-	<p>
-		about me <br> 
-		I am a digital project manager, <br> console game player, <br> and mom to 1 toddler <br> (ignore me if I offer to show a photo).
-	</p>
+	<div class="blocks">
+		<p><img src="IMG_2256.jpg" alt="Picture of Author" title="tooltip" height="220px" width="240px">
+			<br>
+			about me <br><br>
+			Squashy armchairs dirt on your nose brass scales crush the Sopophorous bean with flat side of silver dagger, releases juice better than cutting. Full moon Whomping Willow three turns should do it lemon drops. Locomotor trunks owl treats that will be 50 points, Mr. Potter. Witch Weekly, he will rise again and he will come for us, headmaster Erumpent horn. Fenrir Grayback horseless carriages ‘zis is a chance many would die for!		
+		</p>
 	</div>
+	
 
-	<div class="Links">
-		<h2>Contact Info</h2>
+	<div class="blocks1">
+		<h3>Contact Info</h3>
 	
 		<ul>
-			<li><strong>Email: </strong><a href="jgelo@mac.com">jgelo@mac.com</a></li>
-			<li><strong>Github: </strong><a href="#">Geelow123</a></li>
-			<li><strong>Portfolio: </strong><a href="#">Coming Soon</a></li>
-			
+			<li><strong>Email: </strong><a href="jgelo@mac.com" target="_blank">jgelo@mac.com</a></li>
+			<li><strong>Github: </strong><a href="#" target="_blank">Geelow123</a></li>
+			<li><strong>Portfolio: </strong><a href="#" >Coming Soon</a></li>
 		</ul>
-	</div>
-	<div class="footer">
-	
-		The Small Print
+	</div>	
 
-	</div>
+	<footer>Images and content are the product of a student and should be treated with relatively no seriousness</footer>
 </body>
 </html>
